+ change version number
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5211 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changelog you finde now here:
+https://sourceforge.net/apps/mantisbt/free-cad/changelog_page.php
+
 Version: 
   * Sketcher module added with constraint solver using SketchFlat
   * Add Draft module to installer
