--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,8 @@
 Changelog you finde now here:
 https://sourceforge.net/apps/mantisbt/free-cad/changelog_page.php
 
+Version: 0.12
+
 Version: 
   * Sketcher module added with constraint solver using SketchFlat
   * Add Draft module to installer
