Updated links to the new bugtracker location

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Linux platforms.
 Home page:                             http://www.freecadweb.org
 Documentation wiki:                    http://www.freecadweb.org/wiki
 Forum:                                 http://sourceforge.net/apps/phpbb/free-cad/
-Bug tracker:                           http://sourceforge.net/apps/mantisbt/free-cad/
+Bug tracker:                           http://www.freecadweb.org/tracker
 Git repository:                        http://sourceforge.net/p/free-cad/code/ci/master/tree/
 
 Installing
