Updated forum links to the new subdomain

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Linux platforms.
 
 Home page:                             http://www.freecadweb.org
 Documentation wiki:                    http://www.freecadweb.org/wiki/
-Forum:                                 http://www.freecadweb.org/forum/
+Forum:                                 http://forum.freecadweb.org/
 Bug tracker:                           http://www.freecadweb.org/tracker/
 Git repository:                        http://sourceforge.net/p/free-cad/code/ci/master/tree/
 
